@@ -99,22 +99,33 @@ if (GTK_INCLUDE_DIR)
     add_subdirectory(style)
     add_subdirectory(mozilla)
     if(QTC_REORDER_GTK_DIALOG_BUTTONS)
-        message("\n\n**************************************************************\n"
+        message("\n**************************************************************\n"
                 "Warning: You have enabled the option for QtCurve to try to manually\n"
                 "         re-order the buttons of Gtk dialogs. Note: This will cause\n"
                 "         errors to be printed to the console, and is only an\n"
                 "         experiment!\n"
-                "**************************************************************\n\n\n")
+                "**************************************************************\n")
     endif(QTC_REORDER_GTK_DIALOG_BUTTONS)
     if(QTC_OLD_MOZILLA)
-        message("\n\n**************************************************************\n"
+        message("\n**************************************************************\n"
                 "Information: Defaulting to treating Firefox as Firefox < 3.0\n"
-                "**************************************************************\n\n\n")
+                "**************************************************************\n")
     else(QTC_OLD_MOZILLA)
-        message("\n\n**************************************************************\n"
+        message("\n**************************************************************\n"
                 "Information: Defaulting to treating Firefox as Firefox >= 3.0\n"
-                "**************************************************************\n\n\n")
+                "**************************************************************\n")
     endif(QTC_OLD_MOZILLA)
+    if(QTC_DEFAULT_TO_KDE3)
+        message("\n**************************************************************\n"
+                "Information: Defaulting to reading KDE3 settings if \n"
+                "             KDE_SESSION_VERSION is not set\n"
+                "**************************************************************\n")
+    else(QTC_DEFAULT_TO_KDE3)
+        message("\n**************************************************************\n"
+                "Information: Defaulting to reading KDE4 settings if \n"
+                "             KDE_SESSION_VERSION is not set\n"
+                "**************************************************************\n")
+    endif(QTC_DEFAULT_TO_KDE3)
 else (GTK_INCLUDE_DIR)
     message(FATAL_ERROR "Could not locate Gtk2 include files")
 endif (GTK_INCLUDE_DIR)
