@@ -13,5 +13,6 @@
 #cmakedefine QTC_MODIFY_MOZILLA_USER_JS
 #cmakedefine QTC_REORDER_GTK_DIALOG_BUTTONS
 #cmakedefine QTC_OLD_MOZILLA
+#cmakedefine QTC_DEFAULT_TO_KDE3
 
 #endif
