@@ -8,6 +8,8 @@
 5. Fix mis-painted pixels on selected tab.
 6. Custom gradient fix where "," is used for decimal - thanks to
    Cedric Bellegarde
+7. Default to reading KDE4 settings if KDE_SESSION_VERSION is not set. To
+   default to KDE3 instead, call cmake with -DQTC_DEFAULT_TO_KDE3=true
 
 0.60
 ----
